--- a/style.css
+++ b/style.css
@@ -8,8 +8,10 @@ body {
   height: 100vh;
   font-size: 1rem;
   font-family: "Poppins", sans-serif;
+  background-color: #f8fafc;
 }
 main {
+  background-color: #f8fafc;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -23,6 +25,7 @@ main {
   width: 80%;
 }
 .title h1 {
+  color: #000000;
   text-align: center;
   font-size: 1.5rem;
   margin-bottom: 25px;
@@ -62,7 +65,7 @@ article h2 {
 
 .date {
   font-size: 0.8rem;
-  color: rgb(55, 65, 81);
+  color: #4d5562;
   padding-bottom: 20px;
 }
 
@@ -151,13 +154,16 @@ footer {
   .title {
     max-width: 40%;
   }
+  .title h1 {
+    font-size: 2.25rem;
+  }
 }
 
 @media screen and (min-width: 1350px) {
   main {
     margin: 55px auto;
   }
-   article {
+  article {
     width: 50%;
   }
 }
